# OpenELIS-Global-2

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitmodules  .gitpod.yml  5.3-003 Equipment usage format (1).docx  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  COVERAGE_REPORT.md  Cytology_Bethesda_DataDictionary.csv  DATA_MODEL_EXPLANATION.md  DEVELOPMENT_SETUP.md  Dockerfile  Dockerfile.dev  EQUIPMENT_USAGE_DELIVERY_SUMMARY.md  EQUIPMENT_USAGE_DEPLOYMENT_GUIDE.md  EQUIPMENT_USAGE_IMPLEMENTATION.md  EQUIPMENT_USAGE_QUICKSTART.md  ETHIOPIA_REBASE_V3_REPORT.md  IMPORT_INSTRUCTIONS.md  Issue plan.txt  LAB_UNIT_BACKWARD_COMPATIBILITY.md  LAB_UNIT_DESIGN_FIX_COMPLETE.md  LAB_UNIT_DESIGN_ISSUE.md  LAB_UNIT_FIX_SUMMARY.md  LETSENCRYPT_SETUP.md  LIQUIBASE_CLEANUP_ANALYSIS.md  LIQUIBASE_CLEANUP_COMPLETE.md  M11-IMPLEMENTATION-ANALYSIS.md  M11-SIMULATOR-DASHBOARD-ANALYSIS.md  MANUAL_TESTING_GUIDE.md  MIGRATION_RECOVERY.md  NOTEBOOK_DEPARTMENT_DEBUG.md  NOTEBOOK_DEPARTMENT_SETUP.md  NOTEBOOK_NAMES_VERIFICATION.md  OPENELIS_CHANGES_SUMMARY.md  PATIENT_REPORTS_SUMMARY.md  (+42 more)
.claude/: settings.json  settings.local.json
.cursor/: worktrees.json
.dev-docs/: LETSENCRYPT_SETUP.md  original-spec.md  spec-driven-dev.md  speckit-specify-prompt-v2.md
.devcontainer/: Dockerfile  devcontainer.json
.githooks/: README.md  pre-commit
projects/catalyst/catalyst-agents/: CODE_QUALITY.md  Dockerfile  README.md  pyproject.toml
projects/catalyst/catalyst-agents/src/: config.py  llm_clients.py  mcp_client.py
projects/catalyst/catalyst-agents/src/agents/: catalyst_executor.py  catalyst_server.py  router_executor.py  schema_executor.py  sqlgen_executor.py
projects/catalyst/catalyst-agents/tests/: test_catalyst_agent.py  test_fallback_mode.py  test_integration.py  test_llm_clients.py  test_multi_agent_flow.py  test_schema_agent.py  test_sqlgen_agent.py  test_trajectory_validation.py
projects/catalyst/catalyst-gateway/: Dockerfile  README.md  pyproject.toml
projects/catalyst/catalyst-mcp/: Dockerfile  README.md  pyproject.toml
projects/catalyst/catalyst-mcp/src/: server.py
projects/catalyst/catalyst-mcp/src/tools/: schema_tools.py
projects/catalyst/catalyst-mcp/tests/: test_mcp_tools.py
(+7752 files in other folders)
